--- a/build.gradle
+++ b/build.gradle
@@ -7,7 +7,6 @@ buildscript {
     dependencies {
         classpath 'com.android.tools.build:gradle:4.0.1'
         classpath 'com.google.gms:google-services:4.3.3'
-
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
@@ -17,6 +16,8 @@ allprojects {
     repositories {
         google()
         jcenter()
+        maven{ url "https://jitpack.io"}
+        maven { url 'https://dl.bintray.com/spark/maven' }
     }
 }
 
